force-app/main/default/objects/Strategic__GEMPortal_Grants__c/Strategic__GEMPortal_Grants__c.object-meta.xml
<CustomObject>
    <label>GEM Portal Grant</label>
    <nameField>
        <label>GEM Portal Grant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GEM Portal Grants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>