force-app/main/default/objects/Strategic__GEMPortal_Grants__c/fields/Strategic__Account__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GEM Portal Grants</relationshipLabel>
    <relationshipName>GEM_Portal_Grants</relationshipName>
    <type>Lookup</type>
</CustomField>