force-app/main/default/objects/Strategic__GEMPortal_Grants__c/fields/Strategic__Funder_City__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Funder_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>