force-app/main/default/objects/Strategic__GEMPortal_Grants__c/fields/Strategic__Funder_Last_Updated_At__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Funder_Last_Updated_At__c</fullName>
    <label>Funder Last Updated At</label>
    <type>DateTime</type>
</CustomField>