force-app/main/default/objects/Strategic__GEMPortal_Grants__c/fields/Strategic__Funder_Website__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Funder_Website__c</fullName>
    <label>Funder Website</label>
    <type>Url</type>
</CustomField>