force-app/main/default/objects/Strategic__GEMPortal_Grants__c/fields/Strategic__Grant_Application_Process__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Grant_Application_Process__c</fullName>
    <label>Application Process</label>
    <length>65535</length>
    <type>LongTextArea</type>
</CustomField>