force-app/main/default/objects/Strategic__GEMPortal_Grants__c/fields/Strategic__Grant_Categories__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Grant_Categories__c</fullName>
    <label>Grant Categories</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>