force-app/main/default/objects/Strategic__GEMPortal_Grants__c/fields/Strategic__Grant_Closing_Date_Notes__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Grant_Closing_Date_Notes__c</fullName>
    <label>Closing Date Notes</label>
    <length>65535</length>
    <type>LongTextArea</type>
</CustomField>