force-app/main/default/objects/Strategic__GEMPortal_Grants__c/fields/Strategic__Grant_Closing_Date_Status__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Grant_Closing_Date_Status__c</fullName>
    <label>Closing Date Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBC</fullName>
            </value>
            <value>
                <fullName>Anytime</fullName>
            </value>
            <value>
                <fullName>By Invitation</fullName>
            </value>
            <value>
                <fullName>TBC;EOI/Enquiry</fullName>
            </value>
            <value>
                <fullName>EOI/Enquiry</fullName>
            </value>
            <value>
                <fullName>TBC;Shortlisted Full Application</fullName>
            </value>
            <value>
                <fullName>Shortlisted Full Application</fullName>
            </value>
            <value>
                <fullName>EOI Anytime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>