force-app/main/default/objects/Strategic__GEMPortal_Grants__c/fields/Strategic__Grant_Desynced__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Grant_Desynced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grant Desynced</label>
    <type>Checkbox</type>
</CustomField>