force-app/main/default/objects/Strategic__GEMPortal_Grants__c/fields/Strategic__Grant_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Grant_Eligibility__c</fullName>
    <label>Eligibility</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>