force-app/main/default/objects/Strategic__GEMPortal_Grants__c/fields/Strategic__Grant_Estimated_Distribution_Date__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Grant_Estimated_Distribution_Date__c</fullName>
    <label>Estimated Distribution Date</label>
    <type>Date</type>
</CustomField>