force-app/main/default/objects/Strategic__GEMPortal_Grants__c/fields/Strategic__Grant_Funding_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Grant_Funding_Criteria__c</fullName>
    <label>Funding Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>