force-app/main/default/objects/Strategic__GEMPortal_Grants__c/fields/Strategic__Grant_Id__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Grant_Id__c</fullName>
    <externalId>true</externalId>
    <label>Grant Id</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>