force-app/main/default/objects/Strategic__GEMPortal_Grants__c/fields/Strategic__Grant_Last_Synced_At__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Grant_Last_Synced_At__c</fullName>
    <label>Grant Last Synced At</label>
    <type>Date</type>
</CustomField>