force-app/main/default/objects/Strategic__GEMPortal_Grants__c/fields/Strategic__Grant_Name__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Grant_Name__c</fullName>
    <label>Grant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>