force-app/main/default/objects/Strategic__GEMPortal_Grants__c/fields/Strategic__Grant_Range__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Grant_Range__c</fullName>
    <label>Grant Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$1,001 - $5,000</fullName>
            </value>
            <value>
                <fullName>$5,001 - $10,000</fullName>
            </value>
            <value>
                <fullName>$10,001 - $20,000</fullName>
            </value>
            <value>
                <fullName>$20,001 - $50,000</fullName>
            </value>
            <value>
                <fullName>$50,001 - $100,000</fullName>
            </value>
            <value>
                <fullName>Not set</fullName>
            </value>
            <value>
                <fullName>Over $5m</fullName>
            </value>
            <value>
                <fullName>$100,001 - $250,000</fullName>
            </value>
            <value>
                <fullName>$250,001 - $500,000</fullName>
            </value>
            <value>
                <fullName>$500,001 - $1m</fullName>
            </value>
            <value>
                <fullName>$1,000,001 - $5m</fullName>
            </value>
            <value>
                <fullName>Under $1,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>