force-app/main/default/objects/Strategic__GEMPortal_Grants__c/fields/Strategic__Grant_Range_Notes__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Grant_Range_Notes__c</fullName>
    <label>Grant Range Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>