force-app/main/default/objects/Strategic__GEMPortal_Grants__c/listViews/Strategic__All.listView-meta.xml
<ListView>
    <fullName>Strategic__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>