force-app/main/default/objects/Strategic__GEMPortal_Grants__c/listViews/Strategic__All_Records.listView-meta.xml
<ListView>
    <fullName>Strategic__All_Records</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>